--- a/roles/custom-role/files/index.html
+++ b/roles/custom-role/files/index.html
@@ -35,9 +35,9 @@
 <body>
 
     <div class="container">
-        <h1>🚀 Welcome to Dockerized Nginx! 🚀</h1>
+        <h1> Welcome to Dockerized Nginx! </h1>
         <p>This page is served from an Nginx container running on Docker.</p>
-        <p>Congratulations! Your deployment is successful. 🎉</p>
+        <p>Congratulations! Your deployment is successful.</p>
         <div class="footer">Powered by Docker & Nginx</div>
     </div>
 
